--- a/myab/build.xml
+++ b/myab/build.xml
@@ -12,7 +12,7 @@
 
     <target name="compile">
         <mkdir dir="src"/>
-	 <javac srcdir="src" destdir="src" classpathref="classpath"/>
+	 <javac srcdir="src" debug="true" destdir="src" classpathref="classpath"/>
     </target>  
 
 
